--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #cf0000;
 $blue: #167FFB;
-$yellow: #FFC65A;
+$yellow: #fdca40;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #438a5e;
 $gray: #0E0000;
+$dark-gray: #393e46;
 $light-gray: #F4F4F4;
