--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,21 @@
+<div class="hero-container">
+  <div class="text-bg">
+  <div class="hero-text">
+  <h1>Ones to watch</h1>
+  <h2>Create lists of your favourite films</h2>
+  </div>
+  </div>
+  <%= image_tag "banner.jpeg", alt: "picture of a cinema", class: "hero" %>
+</div>
+
+<div class="d-flex justify-content-around">
 <% @lists.each do |list| %>
-<h1><%= link_to list.name, list_path(list.id) %></h1>
+<div class="card px-3 m-3" style="width: 18rem;">
+  <div class="card-body">
+    <h4 class="card-title"><%= link_to list.name, list_path(list.id) %></h4>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="btn btn-light"><%= link_to 'View list', list_path(list.id)%></a>
+  </div>
+</div>
+</div>
 <% end %>
-<%= link_to "Create a new list", new_list_path %>
