--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,7 @@
   <h2>Create lists of your favourite films</h2>
   </div>
   </div>
-  <%= image_tag "banner.jpeg", alt: "picture of a cinema", class: "hero" %>
+  <%= image_tag "banner.jpg", alt: "picture of a cinema", class: "hero" %>
 </div>
 
 <div class="d-flex justify-content-around">
