--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,7 +8,7 @@
   <%= image_tag "banner.jpg", alt: "picture of a cinema", class: "hero" %>
 </div>
 
-<div class="d-flex justify-content-around">
+<div class="d-flex justify-content-around card-wrapper">
 <% @lists.each do |list| %>
 <div class="card px-3 m-3" style="width: 18rem;">
   <div class="card-body">
