--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,10 @@
 <div class="list-container">
+<% if @list.photo.attached? %>
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+<% else %>
+<%= image_tag "banner.jpg", height: 300, width: 400, crop: :fill  %>
+<% end %>
 <h1 class="list-title"><%= @list.name %></h1>
-<%= cl_image_tag("https://res.cloudinary.com/dkayr6uup/image/upload/v1620156690/qn5i3bsjexoi4kvq3p7y.jpg",
-      width: 400, height: 300, crop: :fill) %>
-<%= cl_image_tag("https://res.cloudinary.com/dkayr6uup/image/upload/v1620156692/zvf1rgmbb0fiu1fmpxs2.jpg",
-      width: 150, height: 150, crop: :thumb, gravity: :face) %>
 <div class="btn btn-success add-film"><%= link_to "Add a film to this list", new_list_bookmark_path(@list.id) %></div>
 </div>
 <div class="d-flex">
