--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,11 @@
-<div class="list-container">
+<div class="list-banner">
 <% if @list.photo.attached? %>
 <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 <% else %>
-<%= image_tag "banner.jpg", height: 300, width: 400, crop: :fill  %>
+<%= image_tag "film.jpg", height: 300, width: 400, crop: :fill  %>
 <% end %>
+</div>
+<div class="list-container">
 <h1 class="list-title"><%= @list.name %></h1>
 <div class="btn btn-success add-film"><%= link_to "Add a film to this list", new_list_bookmark_path(@list.id) %></div>
 </div>
