--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -1,8 +1,9 @@
-.hero-container {
+.hero-image {
   height: 70vh;
   position: relative;
   text-align: center;
   color: #000000;
+  border: none;
 }
 
 .hero {
@@ -10,11 +11,14 @@
 }
 
 .hero-text {
-  background-color: white;
-  padding: 24px;
-  border-radius: 10px;
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: white;
+}
+
+.text-shadow {
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4);
 }
