--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,7 @@
+<div class="form-container">
 <%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.association :movie, input_html: { class: 'select2' } %>
+  <%= f.association :movie, input_html: { class: 'select2' }, label: 'Choose a film' %>
   <%= f.input :comment %>
   <%= f.button :submit %>
 <% end %>
+</div>
