--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,9 +1,13 @@
 .form-body {
-  background-color: $light-gray;
-  height: 100%;
+  margin: auto
 }
 
 .form-container {
   width: 50vw;
-  margin: auto
+  margin: auto;
+  background-color: $white;
+  padding: 64px 40px 64px 40px;
+  margin: auto;
+  margin-top: 40px;
+  border-radius: 4px;
 }
