--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,6 +2,6 @@
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.association :movie, input_html: { class: 'select2' }, label: 'Choose a film' %>
   <%= f.input :comment %>
-  <%= f.button :submit %>
+  <%= f.submit "Add this film", class:"btn btn-success" %>
 <% end %>
 </div>
