--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,7 @@
       <h1>Ones to <span id="banner-typed-text"></span></h1>
       <p>Create lists of your favourite films</p>
     </div>
-    <div class="btn btn-success create">Make a list</div>
+    <div class="btn btn-success create"><%= link_to "Make a list", new_list_path %></div>
   </div>
 </div>
 
